@@ -7,6 +7,8 @@ lintian-brush (0.22) UNRELEASED; urgency=medium
   * Add fixer for debian-watch-file-uses-deprecated-githubredir.
   * Don't attempt to upgrade cdbs packages to anything over debhelper
     10.
+  * Don't complain about reformatting issues if no changes have been
+    made.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 10 Aug 2019 16:49:28 +0000
 
